--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: "ME314: Assignment 11"
-description: "Mining the Social Web"
+description: "Topic Models"
 show_downloads: false
 theme: jekyll-theme-cayman
